--- a/Lotus.csproj
+++ b/Lotus.csproj
@@ -4,7 +4,6 @@
     <Description>Project Lotus</Description>
     <Authors>Discussions, Tealeaf</Authors>
     <langVersion>latest</langVersion>
-    <AmongUs>E:\SteamLibrary\steamapps\common\Among Us</AmongUs>
     <RootNamespace>Lotus</RootNamespace>
     <Nullable>enable</Nullable>
     <GenerateAssemblyFileVersionAttribute>false</GenerateAssemblyFileVersionAttribute>
@@ -14,12 +13,11 @@
   </PropertyGroup>
   
   <PropertyGroup>
-    <debug>true</debug>
+    <debug>false</debug>
   </PropertyGroup>
   
   
   <ItemGroup>
-    <!--<Reference Include="E:\SteamLibrary\steamapps\common\Among Us - LOTUS\dump\Assembly-CSharp-2023.6.13.dll" />-->
     <PackageReference Include="AmongUs.GameLibs.Steam" Version="2023.6.13" />
     <PackageReference Include="BepInEx.Unity.IL2CPP" Version="6.0.0-be.668" PrivateAssets="all" />
     <PackageReference Include="JetBrains.Annotations" Version="2023.2.0-eap2">
@@ -30,7 +28,7 @@
     <PackageReference Include="BepInEx.AutoPlugin" Version="1.1.0" PrivateAssets="all" />
     <PackageReference Include="BepInEx.IL2CPP.MSBuild" Version="2.0.1" PrivateAssets="all" />
     
-    <PackageReference Condition="$(Debug) == 'false'" Include="VentFramework" Version="1.2.0.143" />
+    <PackageReference Condition="$(Debug) == 'false'" Include="VentFramework" Version="1.2.3.412" />
 
     <PackageReference Include="GitInfo" Version="3.0.4" />
 
@@ -56,10 +54,4 @@
     <Content Remove="./SourceGenerators/**/*" />
     <Compile Remove="./SourceGenerators/**/*" />
   </ItemGroup>
-  
-  
-  <Target Name="Copy" AfterTargets="Build" Condition="'$(AmongUs)' != ''">
-    <Copy SourceFiles="$(OutputPath)$(AssemblyName).dll" DestinationFolder="$(AmongUs)/BepInEx/plugins/" Condition="'$(Configuration)' == 'Debug'" />
-    <Copy SourceFiles="$(OutputPath)$(AssemblyName).dll" DestinationFolder="$(AmongUs) - Copy/BepInEx/plugins/" Condition="'$(Configuration)' == 'Debug'" />
-  </Target>
 </Project>
